﻿$Revision$
	$Author$ $Date$
	1. исправлен stack overflow при уничтожении ParseCache. Патч работает, утечек памяти нет.
     Но для полного счастья нужно работу с ParseCache переделать. Но это wishe.

#Revision: 1479
	#Author: ctapmex Date: 2010-04-15 20:54:12 +0600 (Чт, 15 апр 2010)
	1. добавлены процедуры FileTypeImpl.addParam и FileTypeImpl.setParamDefaultValue (нельзя зафрендить
	класс FileTypeImpl из внешнего,для библиотеки, класса)

#Revision: 1476
	#Author: ctapmex Date: 2010-04-15 15:54:54 +0600 (Чт, 15 апр 2010)
	1. zlib 1.2.4

#Revision: 1470
	#Author: ctapmex Date: 2010-03-18 13:57:30 +0500 (Чт, 18 мар 2010)
	1. перенес xmldom из ctapmex-xmlparser

#Revision: 1467
	#Author: ctapmex Date: 2010-03-17 15:38:47 +0500 (Ср, 17 мар 2010)
	1. не коммпилировалось под linux
	2. немного форматирования кода

#Revision: 1446
	#Author: ctapmex Date: 2010-03-10 16:41:05 +0500 (Ср, 10 мар 2010)
	1. ошибка в Node::appendChild - если в списке два элемента, то у каждого следующего 
		prev будет указывать на firstChild. 

#Revision: 1440
	#Author: ctapmex Date: 2010-03-07 21:01:55 +0500 (Вс, 07 мар 2010) $
	1. борьба с warning

#Revision: 1431
	#Author: ctapmex Date: 2010-03-06 15:08:36 +0500 (Сб, 06 мар 2010)
	1. еще один  warning r1426
	
#Revision: 1426
  #Author: ctapmex Date: 2010-03-04 21:30:44 +0500 (Чт, 04 мар 2010)
	1. исправлены warnings типа - "In constructor 'A::A(int)' 'A::b' will be initialized after 'S A::a' when initialized here"

#Revision: 1418
  #Author: ctapmex Date: 2010-03-03 16:36:12 +0500 (Ср, 03 мар 2010)
  1. поправлены build.xml, для правильной сборки баз, после реструктуризации
	2. прогон всех тестов, ошибки скинул в todo

#Revision: 1402
  #Author: ctapmex Date: 2010-02-20 14:43:07 +0500 (Сб, 20 фев 2010)
	1. ParserFactory::searchPath кидала много исключений, пытаясь открыть ".colorer5catalog". хотя 
		он должен обрабатываться одним из последних.

#Revision: 1401
  #Author: ctapmex Date: 2010-02-20 14:19:19 +0500 (Сб, 20 фев 2010)